[package]
name = "imagesearchengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv-vault = "0.1.1"
reqwest = { version = "0.12.1", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
attohttpc = { version = "0.28", features = ["json", "form"] }